# commando

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: pipeline-gates.json
.githooks/: pre-commit  pre-push
.mpd/: .gitignore  config.json  secret-allowlist.json
crates/mpd/: Cargo.toml
crates/mpd/assets/: mpd.schema.yaml
crates/mpd/assets/directives/: protocol.md
crates/mpd/assets/directives/personas/: architect.md  builder.md  designer.md  security.md  tester.md
crates/mpd/assets/templates/: design.md  proposal.md
crates/mpd/assets/templates/judgment/: design-mock.md  design-review.md  design-signoff.md  doc-validation.md  security-code.md  security-plan.md  test.md
crates/mpd/proptest-regressions/: cli.txt  config.txt  ledger.txt
crates/mpd/proptest-regressions/checks/: secrets.txt
crates/mpd/src/: allowlist.rs  attestation.rs  cache.rs  candidate.rs  cli.rs  closure.rs  config.rs  digest.rs  directives.rs  economics.rs  git.rs  githooks.rs  harness.rs  ledger.rs  local_validation.rs  main.rs  pathmatch.rs  personas.rs  phase.rs  recovery.rs  routing.rs  sandbox.rs  sandbox_macos.rs  scaffold.rs  stats.rs
crates/mpd/src/checks/: mod.rs  secrets.rs  tests_runner.rs
crates/mpd/testdata/external-issuer-v1/: PROTOCOL.md  message.sig  message.txt  public-key.txt
crates/mpd/testdata/ledger/: legacy-v1.json
crates/mpd/tests/: e2e.rs
crates/openspec-core/: Cargo.toml
crates/openspec-core/src/: date.rs  digest.rs  error.rs  lib.rs  merge.rs  model.rs  names.rs  parse.rs  project.rs  render.rs  safe_fs.rs  schema.rs  transaction.rs  validate.rs
crates/openspec-core/tests/: fidelity.rs  merge_tests.rs  nonfunctional.rs  parse_edge_cases.rs  project_tests.rs  props.rs  security_tests.rs
crates/openspec-core/tests/fixtures/: all-sections.delta.md  fenced-torture.spec.md
docs/: add-harness-first-readme-quickstart.md  adoption-quickstart.md  candidate-lifecycle-defects.md  candidate-scope-integrity.md  complete-maturity-assessment.md  fix-closure-commit-coherence.md  git-files-fail-closed.md  improve-mpd-process-governance.md  local-first-verification-hardening.md  manifest-scope-autoseed.md  narrow-state-allowlist.md  optimize-quality-cost-time-maturity.md  promote-to-strict.md  scan-secrets-fail-closed.md  (+2 more)
(+354 files in other folders)
