[workspace]
resolver = "2"
members = ["crates/openspec-core", "crates/mpd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Weingarten"]
repository = "https://github.com/mweingartner/commando"
rust-version = "1.91"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive"] }
proptest = "1"
sha2 = "0.10"
nix = { version = "0.30", features = ["fs", "process", "resource", "signal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
