[package]
name = "openspec-core"
description = "Native, dependency-light reader/writer/merger for the OpenSpec on-disk format."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
